rhossm-grpc-example/greeter-server/greeter-server-mtls.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-server
spec:
  ports:
  # Use port name in "<protocol>[-<suffix>]" format, otherwise traffic
  # coming from istio nodes will silently ignore istio RouteRules.
  # Setting the port name won't affect any scenarios that are not using istio.
  - name: grpc
    port: 8000
  selector:
    app: greeter-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter-server
  template:
    metadata:
      labels:
        app: greeter-server
    spec:
      containers:
      - name: greeter-server
        image: quay.io/fperea_rh/greeter-server:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: greeter-certs
          mountPath: "/etc/greetercerts"
          readOnly: true
      volumes:
      - name: greeter-certs
        secret:
          secretName: greeter-server-certs
