rhossm-grpc-example/greeter-server/greeter-server-mtls_ossm.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-server
spec:
  ports:
  # Use port name in "<protocol>[-<suffix>]" format, otherwise traffic
  # coming from istio nodes will silently ignore istio RouteRules.
  # Setting the port name won't affect any scenarios that are not using istio.
  - name: grpc
    port: 8000
  selector:
    app: greeter-server-mtls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter-server-mtls
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: greeter-server-mtls
    spec:
      containers:
      - name: greeter-server
        image: quay.io/fperea_rh/greeter-server:latest
        ports:
        - containerPort: 8000
